<resources>

    <string name="app_name">sample10</string>
    <string name="personDetail">Person Detail</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_address_entry">Address Entry</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="firstlastname">First &amp; Last Name</string>
    <string name="address">Address</string>
    <string name="nothing"></string>
    <string name="title_activity_address_console">Address Console</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="totalRecords">Total Records</string>
    <string name="recordNumber">Record Number</string>
    <string name="view">View</string>
    <string name="service_name">AddressDataSource</string>
    <string name="Address">address</string>
    <string name="Town">town</string>
    <string name="State">state</string>
    <string name="zip">zip</string>

</resources>