<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Grid1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:columnCount="1">

    <Button
            android:id="@+id/cmdView"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
        android:layout_below="@+id/editRecordNumber" />

    <Button
        android:id="@+id/cmdDelete"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/editRecordNumber"
        android:layout_toRightOf="@+id/cmdEdit" />

    <Button
        android:id="@+id/cmdEdit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_toRightOf="@+id/cmdAdd"
        android:layout_below="@+id/editRecordNumber" />

    <Button
            android:id="@+id/cmdAdd"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
        android:layout_below="@+id/editRecordNumber"
        android:layout_toRightOf="@+id/cmdView" />

    <ListView
            android:id="@+id/listAddresses"
            android:layout_width="wrap_content"
            android:layout_height="182dp"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/darker_gray"
            android:scrollbarStyle="insideInset"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true">

        </ListView>

    <TextView
        android:id="@+id/textAddressMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing"
        android:layout_marginLeft="0dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/listAddresses" />

    <EditText
            android:id="@+id/editRecordNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/recordNumber"
            android:text="@string/nothing"

        android:inputType="number"
        android:layout_below="@+id/textAddressMessage" />

</RelativeLayout>
